--- a/models/.env
+++ b/models/.env
@@ -1,2 +1,6 @@
 
 MONGO_URI=mongodb+srv://Ali:Nexus143@cluster0.jm7tn.mongodb.net/?retryWrites=true&w=majority
+mongoose.connect("mongodb+srv://Ali:Nexus143@cluster0.jm7tn.mongodb.net/myDatabase", {
+  useNewUrlParser: true,
+  useUnifiedTopology: true
+});
